[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py2srbcyr"
version = "1.1.0"
authors = [
  { name="Strana (eng: Page)", email="zcprog+pypi@pm.me" },
]
description = "Transliteration of text in Latin into Serbian Cyrillic alphabet"
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/strn/py2srbcyr"
"Bug Tracker" = "https://github.com/strn/py2srbcyr/issues"
